// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should display reason field if approval is no 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={true}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
      <styled.div>
        <Textarea
          data-bdd="approveReferral-reasonForDenying"
          dataBdd=""
          display="inline-block"
          hasError={false}
          height="150px"
          id="reasonForDenying"
          isFullWidth={true}
          labelText="reasonForDenying"
          onChange={[Function]}
          required={true}
          value=""
          width="250px"
        />
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should not display reason field if approval is yes 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={true}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should not validate the reasonForDenying field if approveReferral === no and reason field is clean 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          error=""
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={true}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
      <styled.div>
        <Textarea
          data-bdd="approveReferral-reasonForDenying"
          dataBdd=""
          display="inline-block"
          error=""
          hasError={false}
          height="150px"
          id="reasonForDenying"
          isFullWidth={true}
          labelText="reasonForDenying"
          onChange={[Function]}
          required={true}
          value=""
          width="250px"
        />
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should not validate the reasonForDenying field if approveReferral === no and reason field is clean 2`] = `
Object {
  "approveReferral": "no",
  "errors": Object {
    "approveReferral": "",
    "reasonForDenying": "",
  },
  "formError": false,
  "hasClickedReferralForm": false,
  "hasClickedReferralPack": false,
  "isDirty": Object {
    "approveReferral": true,
  },
  "reasonForDenying": "",
}
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should not validate the reasonForDenying field if approveReferral === yes 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          error=""
          required={true}
        >
          <Radio
            checked={true}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should not validate the reasonForDenying field if approveReferral === yes 2`] = `
Object {
  "approveReferral": "yes",
  "errors": Object {
    "approveReferral": "",
    "reasonForDenying": "",
  },
  "formError": false,
  "hasClickedReferralForm": false,
  "hasClickedReferralPack": false,
  "isDirty": Object {
    "approveReferral": true,
  },
  "reasonForDenying": "",
}
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should render the page correctly when all submit conditions are met 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={false}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={false}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={false}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should render the page correctly when hasClickedReferralForm is true 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should render the page correctly when hasClickedReferralPack is true 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should reset the form and call onBack when handleBackClick fires 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> Form interaction should validate the reasonForDenying field if approveReferral === no and reason field is dirty 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          error=""
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={true}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
      <styled.div>
        <Textarea
          data-bdd="approveReferral-reasonForDenying"
          dataBdd=""
          display="inline-block"
          error="reasonForDenyingError"
          hasError={false}
          height="150px"
          id="reasonForDenying"
          isFullWidth={true}
          labelText="reasonForDenying"
          onChange={[Function]}
          required={true}
          value=""
          width="250px"
        />
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> should render the page correctly 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <styled.div>
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
    </styled.div>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> should render the page correctly for a housing manager 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <FormWrapper
      backButtonText="backButton"
      disableBack={false}
      disablePropertyInformationEditMode={false}
      disableSubmit={true}
      formError=""
      formName="approveReferral"
      handleBackClick={[Function]}
      handleFormSubmit={[Function]}
      hidePropertyInformation={true}
      loading={false}
      otherActions={null}
      otherActionsLeft={null}
      submitButtonText="submitButton"
    >
      <div>
        <styled.h2>
          heading
        </styled.h2>
        <styled.p>
          subtitle
        </styled.p>
        <styled.div>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralForm-link"
            isText={true}
            onClick={[Function]}
          >
            referralFormLink
          </Styled(WithTheme(Button))>
          <Styled(WithTheme(Button))
            data-bdd="approveReferral-legalReferralPack-link"
            href="legalReferralPack/link"
            isText={true}
            onClick={[Function]}
            target="_blank"
          >
            referralPackLink
          </Styled(WithTheme(Button))>
        </styled.div>
      </div>
      <div>
        <styled.label
          data-bdd="approveReferral-radioGroup-label"
        >
          approveReferral
        </styled.label>
        <styled.p>
          <span
            data-bdd="approveReferral-radioGroup-sublabel"
          >
            approveReferralSubtitle
          </span>
        </styled.p>
      </div>
      <styled.div>
        <RadioGroup
          required={true}
        >
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-yes"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="yes"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            yes
          </Radio>
          <Radio
            checked={false}
            data-bdd="approveReferral-radioGroup-no"
            disabled={true}
            display="block"
            error={false}
            hasError={false}
            id="no"
            name="approveReferralGroup"
            onChange={[Function]}
          >
            no
          </Radio>
        </RadioGroup>
      </styled.div>
    </FormWrapper>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ApproveLegalCaseReferralComposition /> should render the page correctly while loading 1`] = `
<withRouter(Connect(PageContentComposition))>
  <Loader
    theme={
      Object {
        "colors": Object {
          "tertiaryLighter": "#D9D4D4",
        },
      }
    }
  />
</withRouter(Connect(PageContentComposition))>
`;
